Updates in DWH notebooks

--- a/03_0_TASK_3_DeltaTable_SOLUTION.ipynb
+++ b/03_0_TASK_3_DeltaTable_SOLUTION.ipynb
@@ -24,9 +24,9 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from delta import configure_spark_with_delta_pip\n",
-    "import EnvironmentSetup as es\n",
-    "es.setupEnvironment()\n",
+    "\n",
     "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()\n",
     "spark = cc.startLocalCluster(\"DeltaTableEx\")\n",
     "spark.getActiveSession()"
    ],
@@ -61,7 +61,8 @@
    "cell_type": "markdown",
    "source": [
     "# Persist a detlatable to disk based on the CSV transactions.csv\n",
-    "Read the CSV file transaction_data_path and write it as a Delta table to transaction_delta_path\n",
+    "Read the CSV file transaction_data_path\n",
+    "Write it as a Delta table to transaction_delta_path\n",
     "Use inferSchema option (see: https://sparkbyexamples.com/pyspark/pyspark-read-csv-file-into-dataframe/) to automatically infer the schema from the CSV file. Otherwise all columns will be of type string"
    ],
    "metadata": {
@@ -73,7 +74,6 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
-    "\n",
     "from pyspark.sql.types import StructType\n",
     "# Read the CSV data and write it as a Delta table\n",
     "df = spark.read.format(\"csv\").option(\"header\", \"true\").option(\"inferSchema\", \"true\").load(transaction_data_path)\n",
@@ -117,7 +117,8 @@
    "cell_type": "markdown",
    "source": [
     "# Get the schema and history information for the Delta table\n",
-    "To get the schema convert the delta object to a spark dataframe and use printSchema()\n",
+    "To get the schema get the dataframe object with toDf() and use printSchema()\n",
+    "Delta table has a history() method that returns a dataframe with the history of the delta table\n",
     "Make sure you understand the results"
    ],
    "metadata": {
@@ -231,7 +232,7 @@
    "cell_type": "markdown",
    "source": [
     "# Update the delta table to increase the quantity of a specific product by a given value\n",
-    "This is not supported without the use of delta table"
+    "You canw write an update statement on the delta table with spark.sql(). This is not supported without the use of delta table"
    ],
    "metadata": {
     "collapsed": false
@@ -269,7 +270,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Consult the history of the Delta table\n",
+    "# Consult the history of the Delta table again\n",
     "Try to understand what you see\n",
     "When the results are truncated, you can use the vertical option in method show() to see the full results"
    ],
@@ -342,7 +343,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Delete all transactions from customer 101"
+    "# Delete all transactions from customer 101\n",
+    "You canw write an delete statement on the delta table with spark.sql(). This is not supported without the use of delta table"
    ],
    "metadata": {
     "collapsed": false
@@ -482,8 +484,8 @@
    "source": [
     "# Perform an merge operation\n",
     "Get info on merge operations: https://docs.delta.io/latest/delta-update.html#upsert-into-a-table-using-merge&language-sql\n",
-    "1. Create a new dataframe original_df that reads the original transaction data from the CSV file an create a temporary view 'original_transactions'\n",
-    "2. Perform a merge of  'original_transactions' into   'transactions'\n",
+    "1. Create a new dataframe original_df that reads the original transaction data from the CSV file and create a temporary view 'original_transactions'\n",
+    "2. Perform a merge of  'original_transactions' into 'transactions'\n",
     "3. When a match is found, update the quantity for that row to 0\n",
     "4. When no match is found, insert the row from the new dataframe"
    ],
