--- a/04_00_CHECK_jdbcConnection.ipynb
+++ b/04_00_CHECK_jdbcConnection.ipynb
@@ -6,15 +6,14 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:47:08.652012Z",
-     "end_time": "2023-09-01T09:47:08.867562Z"
+     "start_time": "2023-09-20T07:59:36.262398Z",
+     "end_time": "2023-09-20T07:59:36.894912Z"
     }
    },
    "outputs": [],
    "source": [
     "import pyspark\n",
-    "from pyspark.sql import SparkSession\n",
-    "import ConnectionConfig as cc"
+    "from pyspark.sql import SparkSession"
    ]
   },
   {
@@ -22,14 +21,14 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "import EnvironmentSetup\n",
-    "EnvironmentSetup.setupEnvironment()"
+    "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:47:10.496706Z",
-     "end_time": "2023-09-01T09:47:10.543972Z"
+     "start_time": "2023-09-20T07:59:40.696476Z",
+     "end_time": "2023-09-20T07:59:40.839654Z"
     }
    }
   },
@@ -69,8 +68,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x207ec0f6040>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x27c1f4d08e0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 3,
      "metadata": {},
@@ -96,8 +95,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:07:27.601159Z",
-     "end_time": "2023-09-01T09:08:47.640416Z"
+     "start_time": "2023-09-20T07:59:44.137835Z",
+     "end_time": "2023-09-20T08:00:43.533912Z"
     }
    }
   },
@@ -1154,8 +1153,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:08:47.642415Z",
-     "end_time": "2023-09-01T09:08:57.601104Z"
+     "start_time": "2023-09-20T08:00:50.400232Z",
+     "end_time": "2023-09-20T08:01:01.588663Z"
     }
    }
   },
@@ -1169,8 +1168,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:08:57.580082Z",
-     "end_time": "2023-09-01T09:08:57.889080Z"
+     "start_time": "2023-09-20T08:02:05.737269Z",
+     "end_time": "2023-09-20T08:02:06.259945Z"
     }
    }
   },
