--- a/05_1_DWH_dimDate.ipynb
+++ b/05_1_DWH_dimDate.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:27:07.060453Z",
-     "end_time": "2023-09-01T09:27:07.492242Z"
+     "start_time": "2023-09-20T08:02:31.251557Z",
+     "end_time": "2023-09-20T08:02:31.914318Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,6 @@
     "\n",
     "from pyspark.sql import SparkSession\n",
     "from delta import configure_spark_with_delta_pip\n",
-    "import EnvironmentSetup as es\n",
     "import ConnectionConfig as cc\n",
     "cc.setupEnvironment()\n"
    ]
@@ -41,8 +40,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:27:09.178975Z",
-     "end_time": "2023-09-01T09:28:06.918179Z"
+     "start_time": "2023-09-20T08:02:56.452339Z",
+     "end_time": "2023-09-20T08:03:36.866919Z"
     }
    },
    "outputs": [
@@ -50,13 +49,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyspark.sql.session.SparkSession object at 0x00000217F0707A30>\n"
+      "<pyspark.sql.session.SparkSession object at 0x00000223A1809910>\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x217f0707a30>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x223a1809910>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -84,8 +83,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:35:51.463792Z",
-     "end_time": "2023-09-01T09:35:56.457303Z"
+     "start_time": "2023-09-20T08:30:23.583710Z",
+     "end_time": "2023-09-20T08:30:33.247035Z"
     }
    },
    "outputs": [
@@ -141,8 +140,8 @@
    "metadata": {},
    "source": [
     "In this example a dataframe df_SQL is created based on the result of a select statement:\n",
-    "* ```spark.sql``` is used to create daterows with sql-like language. You can find all possible SQL functions [here](https://spark.apache.org/docs/latest/api/sql/)\n",
-    "* [```explode```](https://spark.apache.org/docs/latest/api/sql/#explode) generates a row for each item in the array, [```sequence```](https://spark.apache.org/docs/latest/api/sql/#sequence) creates a list of dates between the begin and end date. The interval is 1 day.\n",
+    "* ```spark.sql``` is used to create date rows with sql-like language. You can find all possible SQL functions [here](https://spark.apache.org/docs/latest/api/sql/)\n",
+    "*  [```sequence```](https://spark.apache.org/docs/latest/api/sql/#sequence) creates a list of dates between the begin and end date. The interval is 1 day., [```explode```](https://spark.apache.org/docs/latest/api/sql/#explode) generates a row for each item in the array.\n",
     "* [```monotonically_increasing_id```](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.functions.monotonically_increasing_id.html#pyspark.sql.functions.monotonically_increasing_id) is used to generate a unique id in a clustered environment\n",
     "\n",
     "The dataframe is made available to use as a table called \"neededDates\"."
@@ -170,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:44:16.411291Z",
-     "end_time": "2023-09-01T09:44:17.348667Z"
+     "start_time": "2023-09-20T08:34:43.615040Z",
+     "end_time": "2023-09-20T08:34:45.280560Z"
     }
    },
    "outputs": [
@@ -266,8 +265,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:43:51.351706Z",
-     "end_time": "2023-09-01T09:43:51.583163Z"
+     "start_time": "2023-09-20T08:34:55.204790Z",
+     "end_time": "2023-09-20T08:34:55.899111Z"
     }
    },
    "outputs": [
@@ -335,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-09-01T09:44:22.535377Z",
-     "end_time": "2023-09-01T09:44:39.015219Z"
+     "start_time": "2023-09-20T08:35:56.735430Z",
+     "end_time": "2023-09-20T08:36:15.284417Z"
     }
    },
    "outputs": [],
@@ -352,14 +351,23 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:59:30.009615Z",
-     "end_time": "2023-04-25T11:59:30.727164Z"
+     "start_time": "2023-09-20T08:36:18.273660Z",
+     "end_time": "2023-09-20T08:36:20.358666Z"
     }
    },
    "outputs": [],
    "source": [
     "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
