--- a/05_2_DWH_dimSalesRep_Initial.ipynb
+++ b/05_2_DWH_dimSalesRep_Initial.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import random\n",
@@ -23,15 +23,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T10:08:28.671963Z",
-     "end_time": "2023-09-01T10:08:29.092162Z"
+     "start_time": "2023-09-20T11:09:44.975583Z",
+     "end_time": "2023-09-20T11:09:45.207088Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pyspark.sql.session.SparkSession object at 0x00000217ECB9E3D0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x217ecb9e3d0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>dimSalesRepInit</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cc.setupEnvironment()\n",
     "spark = cc.startLocalCluster(\"dimSalesRepInit\")\n",
@@ -40,8 +57,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T10:09:07.058926Z",
-     "end_time": "2023-09-01T10:10:24.879971Z"
+     "start_time": "2023-09-20T11:36:22.911439Z",
+     "end_time": "2023-09-20T11:36:37.316793Z"
     }
    }
   },
@@ -70,8 +87,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- salesRepSK: string (nullable = false)\n",
+      " |-- salesRepID: decimal(11,0) (nullable = true)\n",
+      " |-- name: string (nullable = true)\n",
+      " |-- office: string (nullable = true)\n",
+      " |-- scd_start: timestamp (nullable = true)\n",
+      " |-- scd_end: timestamp (nullable = true)\n",
+      " |-- md5: string (nullable = true)\n",
+      " |-- current: boolean (nullable = false)\n",
+      "\n",
+      "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
+      "|          salesRepSK|salesRepID|          name|       office|          scd_start|            scd_end|                 md5|current|\n",
+      "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
+      "|e1403167-d6bc-4e1...|         1|       Z. Jane|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|00b409cd29c569266...|   true|\n",
+      "|4b7542d1-f37c-497...|         2|P. Chapmanneke|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|ff8eb928f1004c797...|   true|\n",
+      "|4aebfcb7-48c1-467...|         3|      T. Crane|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|6c062f95defda9dc3...|   true|\n",
+      "|1605101a-71cf-4bd...|         4|     R. Geller|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|6f34bd2f09f010ec1...|   true|\n",
+      "|392eef95-7448-481...|         5|       J.Mosby|       Berlin|1999-01-01 00:00:00|2100-12-12 00:00:00|fa85515824433037a...|   true|\n",
+      "|40945224-e95e-42f...|         6|    B. Simpson|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|0ecb6ba5656492a5f...|   true|\n",
+      "|2fa41c1a-4fb7-457...|         7|    B. Stinson|San Fransisco|1999-01-01 00:00:00|2100-12-12 00:00:00|e726b2d8dc0cf9a6f...|   true|\n",
+      "|7b4e26d0-0ef4-479...|         8| L. Hofstadter|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|a2bbe52f8274b0f08...|   true|\n",
+      "|10c3e797-2cfb-490...|         9|     S. Cooper|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|d85c73c9d03df0002...|   true|\n",
+      "|2f86a6f3-a4d6-448...|        10|  F. Underwood|     Brussels|1999-01-01 00:00:00|2100-12-12 00:00:00|44cd1a6d596b05688...|   true|\n",
+      "|0e0d96aa-c680-474...|        11|      W. White|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|f9ea69ce2aa4482b4...|   true|\n",
+      "|1b0305db-f628-48a...|        12|  T. Lannister|     New York|1999-01-01 00:00:00|2100-12-12 00:00:00|3259a471f9816d7c3...|   true|\n",
+      "|11945efe-27c2-46c...|        13|     M. Rosske|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|c99e12e650c2aebc8...|   true|\n",
+      "|47735880-7086-418...|     10015|         Frits|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|a9986535dd7259e4c...|   true|\n",
+      "|f73e89e8-e0fb-4a4...|     10016|          Baby|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|3791c67a76ab1b258...|   true|\n",
+      "|306f29e6-65dd-47d...|     10017|      Boomerke|        Paris|1999-01-01 00:00:00|2100-12-12 00:00:00|03900773d45edec5e...|   true|\n",
+      "|e6285f3a-e1bc-464...|     10018|        Boomer|       London|1999-01-01 00:00:00|2100-12-12 00:00:00|41f9e91bd29384e7a...|   true|\n",
+      "+--------------------+----------+--------------+-------------+-------------------+-------------------+--------------------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "cc.set_connection(\"tutorial_op\")\n",
     "\n",
@@ -108,8 +164,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T10:40:02.328129Z",
-     "end_time": "2023-09-01T10:40:08.238681Z"
+     "start_time": "2023-09-20T11:36:53.138962Z",
+     "end_time": "2023-09-20T11:37:02.616167Z"
     }
    }
   },
@@ -117,7 +173,7 @@
    "cell_type": "markdown",
    "source": [
     "* The function lit() is used when you want a fixed column value for every row. In this case scd_start, scd_end and current.\n",
-    "* The function md5() performs a md5-hash function on the preferred columns. This is needed to detect scd2 changes. When a specific column changes, the md5-hash will change. Include all SCD2 columns in the md5-hash function."
+    "* The function md5() performs a md5-hash function on the preferred columns. This is needed to detect scd2 changes. When one of the included columns changes, the md5-hash will change. Include all SCD2 columns in the md5-hash function."
    ],
    "metadata": {
     "collapsed": false
@@ -134,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "spark.stop()"
@@ -142,18 +198,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-09-01T10:40:49.223259Z",
-     "end_time": "2023-09-01T10:40:49.450587Z"
+     "start_time": "2023-09-20T11:09:56.162399Z",
+     "end_time": "2023-09-20T11:09:57.156653Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T11:09:57.156653Z",
+     "end_time": "2023-09-20T11:09:57.172278Z"
+    }
    }
   }
  ],
