--- a/05_4_DWH_factSales.ipynb
+++ b/05_4_DWH_factSales.ipynb
@@ -11,47 +11,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "\n",
-    "from pyspark.sql import SparkSession, functions\n",
     "import ConnectionConfig as cc\n",
-    "from pyspark.sql.functions import *\n"
+    "from delta import DeltaTable\n",
+    "cc.setupEnvironment()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:14:17.996209Z",
+     "end_time": "2023-09-20T14:14:18.034318Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pyspark.sql.session.SparkSession object at 0x0000025E32A85850>\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x1f752c6ddf0>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.1.1</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>FactSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x25e32a85850>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>factSales</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from delta import configure_spark_with_delta_pip\n",
-    "builder = SparkSession.builder \\\n",
-    "    .appName(\"FactSales\") \\\n",
-    "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
-    "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\") \\\n",
-    "    .config(\"spark.sql.shuffle.partitions\", \"4\") \\\n",
-    "    .config(\"spark.driver.extraClassPath\", \":\".join(cc.jars)) \\\n",
-    "    .master(\"local[*]\")\n",
-    "builder = configure_spark_with_delta_pip(builder)\n",
-    "spark = builder.getOrCreate()\n",
-    "builder.getOrCreate()"
+    "spark = cc.startLocalCluster(\"factSales\")\n",
+    "spark.getActiveSession()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:14:19.601900Z",
+     "end_time": "2023-09-20T14:14:19.693902Z"
+    }
    }
   },
   {
@@ -80,7 +86,7 @@
     "\n",
     "\n",
     "In this case we just rename Amount and create a default count_mv column.\n",
-    "The transformations are minimal. In reality, those transformations can be far more complex. If so, it can be advisable to work out the transforms in more then one step.*\n",
+    "The transformations are minimal. In reality, transformations can be far more complex. If so, it can be advisable to work out the transforms in more then one step.*\n",
     "\n"
    ],
    "metadata": {
@@ -89,13 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "outputs": [],
    "source": [
-    "cc.set_connection(\"mydb\")\n",
+    "cc.set_connection(\"default\")\n",
     "sale_src_df = spark.read \\\n",
     "    .format(\"jdbc\") \\\n",
     "    .option(\"url\", cc.create_jdbc()) \\\n",
+    "    .option(\"driver\" , \"com.microsoft.sqlserver.jdbc.SQLServerDriver\") \\\n",
     "    .option(\"dbtable\", \"dbo.sales\") \\\n",
     "    .option(\"user\", cc.get_Property(\"username\")) \\\n",
     "    .option(\"password\", cc.get_Property(\"password\")) \\\n",
@@ -104,13 +111,16 @@
     "    .option(\"lowerBound\", 0) \\\n",
     "    .option(\"upperBound\", 1000) \\\n",
     "    .load()\\\n",
-    "    .withColumnRenamed(\"Amount\",\"revenue_mv\")\\\n",
-    "    .withColumn(\"count_mv\", lit(1))\n",
+    "\n",
     "\n",
     "#sale_src_df.show(20)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:55:03.154631Z",
+     "end_time": "2023-09-20T14:55:03.214083Z"
+    }
    }
   },
   {
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "dim_date = spark.read.format(\"delta\").load(\"spark-warehouse/dimdate\")\n",
@@ -135,7 +145,11 @@
     "dim_salesrep.createOrReplaceTempView(\"dimSalesRep\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:55:05.848698Z",
+     "end_time": "2023-09-20T14:55:05.911201Z"
+    }
    }
   },
   {
@@ -155,26 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+------+----------+-------+----------+\n",
-      "|OrderID|dateSK|salesrepSK|countMV|revenue_mv|\n",
-      "+-------+------+----------+-------+----------+\n",
-      "|     57|   866|         1|      1| 778297706|\n",
-      "|     58|   320|         1|      1|2100696115|\n",
-      "|     59|  1012|         1|      1| 642114638|\n",
-      "|     60|  1375|         1|      1|1440206513|\n",
-      "|     61|   954|         1|      1|1244596895|\n",
-      "|     62|   957|         1|      1|1662557955|\n",
-      "|     63|    62|         1|      1| 844183988|\n",
-      "|     64|   229|         1|      1| 681975050|\n",
-      "|     65|   684|         1|      1|1504576144|\n",
-      "|     66|   876|         1|      1| 622992265|\n",
-      "+-------+------+----------+-------+----------+\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "|     57|   866|4b7542d1-f37c-497...|       1| 778297706|2150305dc098e07de...|\n",
+      "|     58|   320|4b7542d1-f37c-497...|       1|2100696115|53e902b9d629657aa...|\n",
+      "|     59|  1012|4b7542d1-f37c-497...|       1| 642114638|53f9040871c3ba0c2...|\n",
+      "|     60|  1375|4b7542d1-f37c-497...|       1|1440206513|bca991caefd0fe406...|\n",
+      "|     61|   954|4b7542d1-f37c-497...|       1|1244596895|e50401a2ecae16151...|\n",
+      "|     62|   957|4b7542d1-f37c-497...|       1|1662557955|ee20c8bbf2d348df4...|\n",
+      "|     63|    62|4b7542d1-f37c-497...|       1| 844183988|f380732388a1164b5...|\n",
+      "|     64|   229|4b7542d1-f37c-497...|       1| 681975050|5a4559c3a230a15f3...|\n",
+      "|     65|   684|4b7542d1-f37c-497...|       1|1504576144|a2e63a4c4057e7958...|\n",
+      "|     66|   876|4b7542d1-f37c-497...|       1| 622992265|28b244a851aed9950...|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
@@ -182,7 +196,7 @@
    ],
    "source": [
     "sale_src_df.createOrReplaceTempView(\"sales_source\")\n",
-    "salesFactFromSource = spark.sql(\"select src.Order_ID as OrderID, dd.dateSk as dateSK, ds.salesrepSK, src.count_mv as countMV, src.revenue_mv as revenue_mv \\\n",
+    "salesFactFromSource = spark.sql(\"select src.Order_ID as OrderID, dd.dateSk as dateSK, ds.salesrepSK, 1 as count_mv, src.amount as revenue_mv, md5(concat(src.Order_ID,dd.dateSk,ds.salesrepSK, 1, src.amount)) as md5 \\\n",
     "          from sales_source as src \\\n",
     "          left outer join dimdate as dd on src.Order_Date = cast(dd.CalendarDate as DATE) \\\n",
     "           left outer join dimSalesRep as ds \\\n",
@@ -190,17 +204,23 @@
     "                      and src.Order_Date > ds.scd_start \\\n",
     "                      and src.Order_Date <= ds.scd_end\")\n",
     "\n",
-    "salesFactFromSource.show(10)\n"
+    "salesFactFromSource.show(10)\n",
+    "salesFactFromSource.createOrReplaceTempView(\"factSales_new\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:55:08.678059Z",
+     "end_time": "2023-09-20T14:55:10.162611Z"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
     "## Initial load\n",
-    "The first time loading the fact table perform a FULL load. All data is written to the Delta Table."
+    "The first time loading the fact table perform a FULL load. All data is written to the Delta Table.\n",
+    "After initial load the code line has to be disabled"
    ],
    "metadata": {
     "collapsed": false
@@ -208,30 +228,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "\n",
     "#salesFactFromSource.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"factSales\")\n",
-    "\n",
-    "\n",
-    "#spark.sql(\"ALTER TABLE dimSalesRep  ADD columns (salesRepSK long GENERATED ALWAYS AS IDENTITY (START WITH 0 INCREMENT BY 1)\")"
+    "\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:26:12.710635Z",
+     "end_time": "2023-09-20T14:26:20.957065Z"
+    }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
     "## Incremental load\n",
-    "When previous runs where performend you can opt for a 'faster' icremental run that only writes away changes.\n",
-    "In this example two merges are used: One that updates existing records and one that inserts new records.\n",
-    "\n",
-    "\n",
-    "- *Why two merges? Combining them in one merge did result in creating copies of all parquet files. This is due to the Delta Lake internals*\n",
-    "- * In our solution we detect a change by comparing avery source field with the existing fact field. Using the md5 hash strategy (see SCD2 dimension) would have been a superior solution. The MD5 column can be added in step 3.\n",
-    "- * To make the loading proces even faster you can opt to only read changed rows from the source tables (sales operational table in this case). This however requires a \"last_updated\" timestamp in the source table.*"
+    "When previous runs where performend you can opt for a 'faster' incremental run that only writes away changes. UPDATES and INSERTS are performed in one run.\n",
+    "In our solution we use an md5 based on all fields in the source table to detect changes. This is not the most efficient way to detect changes. A better way is to use a timestamp field in the source table and use that to detect changes. This is not implemented in this example."
    ],
    "metadata": {
     "collapsed": false
@@ -239,26 +256,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+----------------+----------------+-----------------+\n",
+      "|num_affected_rows|num_updated_rows|num_deleted_rows|num_inserted_rows|\n",
+      "+-----------------+----------------+----------------+-----------------+\n",
+      "|                1|               0|               0|                1|\n",
+      "+-----------------+----------------+----------------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "from delta import DeltaTable\n",
-    "fact = DeltaTable.forPath(spark,\".\\spark-warehouse\\\\factsales\")\n",
+    "dt_factSales = DeltaTable.forPath(spark,\".\\spark-warehouse\\\\factsales\")\n",
+    "dt_factSales.toDF().createOrReplaceTempView(\"factSales_current\")\n",
     "#Merge to perform updates (TODO: Implement md5 strategy)\n",
-    "fact.alias(\"current\")\\\n",
-    ".merge(salesFactFromSource.alias(\"new\"),\n",
-    "       \"current.OrderID = new.OrderId \"\n",
-    "       \"and (current.dateSK <> new.dateSK OR current.salesrepSK <> new.salesrepSK OR current.countMV <> new.countMV OR current.revenue_MV <> new.revenue_MV)\").whenMatchedUpdateAll().execute()\n",
-    "#Merge to perform inserts\n",
-    "fact.alias(\"current\").merge(salesFactFromSource.alias(\"new\"),\"current.OrderID = new.OrderId\").whenNotMatchedInsertAll().execute()"
+    "\n",
+    "result = spark.sql(\"MERGE INTO factSales_current AS target \\\n",
+    "          using factSales_new AS source ON target.orderID = source.orderID \\\n",
+    "          WHEN MATCHED and source.MD5<>target.MD5 THEN UPDATE SET * \\\n",
+    "          WHEN NOT MATCHED THEN INSERT *\")\n",
+    "\n",
+    "result.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T14:55:14.894114Z",
+     "end_time": "2023-09-20T14:55:23.525288Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -267,26 +302,15 @@
       "+--------+\n",
       "|count(1)|\n",
       "+--------+\n",
-      "|    1000|\n",
+      "|    1001|\n",
       "+--------+\n",
       "\n",
-      "+-------+------+----------+-------+----------+\n",
-      "|OrderID|dateSK|salesrepSK|countMV|revenue_mv|\n",
-      "+-------+------+----------+-------+----------+\n",
-      "|      1|  5405|         0|      1|        10|\n",
-      "+-------+------+----------+-------+----------+\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "|OrderID|dateSK|          salesrepSK|count_mv|revenue_mv|                 md5|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
+      "|      1|  5405|20c5b991-3e36-4a3...|       1|       100|026257428dfcb7829...|\n",
+      "+-------+------+--------------------+--------+----------+--------------------+\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'selec' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-17-ea69ebe1c8dd>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mspark\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msql\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"select * from factsales where orderId=1\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 7\u001B[1;33m \u001B[0mselec\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m: name 'selec' is not defined"
      ]
     }
    ],
@@ -299,7 +323,11 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-20T15:00:55.998584Z",
+     "end_time": "2023-09-20T15:00:59.102741Z"
+    }
    }
   },
   {
